<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
<LinearLayout

android:id="@+id/ll"
android:layout_marginTop="100dp"
android:layout_marginLeft="25dp"
android:layout_marginRight="25dp"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">
    <ImageView
        android:src="@drawable/facebook"
        android:layout_gravity="center"
        android:layout_width="500px"
        android:layout_height="250px" />

<EditText
    android:layout_marginBottom="15dp"
    android:background="@color/white"
    android:textColor="@color/blue"
    android:hint="@string/input1"
    android:layout_width="match_parent"
    android:layout_height="50dp" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginBottom="15dp"
    android:background="@color/white"
    android:hint="@string/input2"
    android:textColor="@color/blue" />

<Button
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/colorPrimaryDark"
    android:text="@string/login"
    android:textAllCaps="true"
    android:textColor="@color/white"
    android:textSize="25sp" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/forgot"
    android:layout_gravity="center"
    android:textColor="@color/white" />
</LinearLayout>

<TextView
android:text="@string/singup"
android:textColor="#fff"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_alignParentBottom="true"
android:layout_centerInParent="true"/>

</RelativeLayout>